nullaway_error_b7443edc-0fb8-4caa-8d63-fd943af9b758.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/entities/Creature.java:157: error: [NullAway] returning @Nullable expression from method with @NonNull return type
    return this.velocity;
    ^
    (see http://t.uber.com/nullaway )
